--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"postcss": "^8.4.38",
 		"prettier": "^3.3.1",
 		"prettier-plugin-svelte": "^3.2.4",
+		"stwui": "^0.21.2-next",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
 		"tailwindcss": "^3.4.4",
